<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_screen_offline_mode_box"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/color_gray"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginHorizontal="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode_warning_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/transaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="none"
            android:text="@string/cash_register_app_screen_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/reference_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="45dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:enabled="false"
            android:inputType="none"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_1"
            android:layout_alignEnd="@+id/btn_3"
            android:layout_alignParentTop="true"

            android:layout_marginTop="90dp"
            android:clickable="false"
            android:ems="10"

            android:enabled="false"
            android:inputType="none"
            android:text="@string/amount_to_pay"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_2"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/btn_2"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:text="@string/_1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:text="@string/_2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_2"
            android:layout_alignBottom="@+id/btn_2"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/btn_2"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:text="@string/_3"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_5"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/btn_5"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:text="@string/_4"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_2"
            android:layout_alignStart="@+id/btn_2"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:text="@string/_5"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:layout_alignStart="@+id/btn_3"
            android:layout_alignBaseline="@+id/btn_5"
            android:text="@string/_6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/btn_5"
            android:layout_alignStart="@+id/btn_4"
            android:text="@string/_7"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:layout_below="@+id/btn_5"
            android:layout_alignStart="@+id/btn_5"
            android:text="@string/_8"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/btn_5"
            android:layout_alignStart="@+id/btn_6"
            android:text="@string/_9"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_8"
            android:layout_alignStart="@+id/btn_7"
            android:layout_alignEnd="@+id/btn_7"
            android:layout_alignBottom="@+id/btn_0"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_bg"
            android:contentDescription="@string/del"
            android:elevation="2dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@android:color/holo_orange_light" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/btn_8"
            android:layout_alignStart="@+id/btn_8"
            android:text="@string/_0"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:elevation="2dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/btn_8"
            android:layout_alignStart="@+id/btn_9"
            android:layout_alignEnd="@+id/btn_9"
            android:layout_alignBottom="@+id/btn_0"
            android:src="@drawable/ic_clear_black_24dp"
            android:contentDescription="@string/clear"
            app:tint="@android:color/holo_red_light" />

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_0"
            android:layout_alignStart="@+id/btn_7"
            android:layout_alignEnd="@+id/btn_clear"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="?attr/colorPrimary"
            android:elevation="2dp"
            android:text="@string/pay"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/overlay_reference_"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_bg"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/reference_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_reference_"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="60dp"
            android:autofillHints="hello"
            android:hint="@string/reference_hint"
            android:inputType="text"
            android:singleLine="true">
        </EditText>

        <Button
            android:id="@+id/btn_reference_validate_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="5dp"
            android:text="@string/validate"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_reference_cancel_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="5dp"
            android:text="@string/remove"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_reference_permanent_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="5dp"
            android:text="@string/permanent"
            android:textColor="#FFFFFF" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>